# oracle-doc-downloader

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  crawler.py  downloader.py  main.py  metadata.py  renamer.py  test_crawler.py  utils.py
